# RoboVacuumDDPG

./: .env-example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
assets/: README.md  demo_policy.pt
config/: config.yaml
data/: README.md
data/maps/: apt_large.json  apt_multi.json  apt_small.json  office.json  room_single.json
docs/: ANALYSIS.md  COST_ANALYSIS.md  PLAN.md  PRD.md  QUALITY.md  THEORY.md  TODO.md  UX.md
docs/adr/: ADR-001-simulator-from-scratch.md  ADR-002-unicycle-model.md  ADR-003-gaussian-exploration-noise.md  ADR-004-coverage-grid.md  ADR-005-houseexpo-adapter.md  ADR-006-reward-shaping.md  ADR-007-network-sizing-and-tau.md  ADR-008-multiseed-heldout-eval.md
docs/prd/: PRD-DDPG.md  PRD-HOUSEEXPO.md  PRD-SIM.md
docs/shared/: PROMPTS.md
notebooks/: analysis.ipynb
results/: README.md  holdout_eval.json  metrics_summary.json  sweep_n_rays.json
scripts/: _fetch_archive.py  capture_screenshots.py  check_file_sizes.py  evaluate.py  fetch_houseexpo.py  play.py  render_coverage_heatmap.py  render_critic_loss.py  render_learning_curve.py  render_sensitivity.py  render_trajectory.py  sweep_n_rays.py  train.py
src/: __init__.py
src/cost/: meter.py
src/ddpg/: agent.py  noise.py  replay_buffer.py
src/env/: _house_map_geom.py  collision.py  coverage.py  house_map.py  kinematics.py  raycast.py  reward.py  state.py  vacuum_env.py
src/gui/: app.py  curve_view.py  env_view.py  hud.py  input_map.py  palette.py  transform.py
src/model/: actor.py  critic.py
src/sdk/: sdk.py
tests/: conftest.py
(+61 files in other folders)
